# learnopencv

./: CMakeLists.txt
AgeGender/: CMakeLists.txt
AlphaBlending/: CMakeLists.txt  alphaBlend.cpp
BlobDetector/: CMakeLists.txt  blob.cpp
CenterofBlob/: CMakeLists.txt
ColorSpaces/: CMakeLists.txt
Colorization/: CMakeLists.txt
Colormap/: CMakeLists.txt  colormap.cpp  custom_colormap.cpp
ConvexHull/: CMakeLists.txt
Delaunay/: CMakeLists.txt  delaunay.cpp
EigenFace/: CMakeLists.txt  EigenFace.cpp
ExposureFusion/: CMakeLists.txt  exposureFusion.cpp
FPS/: CMakeLists.txt
FaceAverage/: CMakeLists.txt
FaceDetectionComparison/: CMakeLists.txt
FaceMorph/: CMakeLists.txt
FaceSwap/: CMakeLists.txt
GOTURN/: CMakeLists.txt
HeadPose/: CMakeLists.txt
Holes/: CMakeLists.txt
Homography/: CMakeLists.txt  homography.cpp
Hough-Transform/: CMakeLists.txt
HuMoments/: CMakeLists.txt
Image-Inpainting/: CMakeLists.txt
ImageAlignment/: CMakeLists.txt  image_alignment.cpp  image_alignment_simple_example.cpp
InvisibilityCloak/: CMakeLists.txt
MultiObjectTracker/: CMakeLists.txt
NonPhotorealisticRendering/: CMakeLists.txt
OCR/: CMakeLists.txt
QRCode-OpenCV/: CMakeLists.txt
ReconstructFaceUsingEigenFaces/: CMakeLists.txt
RedEyeRemover/: CMakeLists.txt
RotationMatrixToEulerAngles/: CMakeLists.txt
SeamlessCloning/: CMakeLists.txt
SelectiveSearch/: CMakeLists.txt
TextDetectionEAST/: CMakeLists.txt
Threshold/: CMakeLists.txt
UI-cvui/: CMakeLists.txt
VideoBackgroundEstimation/: CMakeLists.txt
VideoReadWriteDisplay/: CMakeLists.txt
VideoStabilization/: CMakeLists.txt  video_stabilization.cpp
WarpTriangle/: CMakeLists.txt
app-seperation-semseg/: CMakeLists.txt
barcode-QRcodeScanner/: CMakeLists.txt
digits-classification/: CMakeLists.txt
example_cmake/: CMakeLists.txt
fisheye_calibration/: CMakeLists.txt  README.md  mono_calibrate.cpp  popt_pp.h  stereo_calibrate.cpp
forEach/: CMakeLists.txt
hdr/: CMakeLists.txt
imread/: CMakeLists.txt
ninjaEyeDetector/: CMakeLists.txt
tracking/: CMakeLists.txt
