cmake_minimum_required(VERSION 3.1)

project(learn_opencv_example)


set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
# add_subdirectory(AgeGender)
add_subdirectory(AlphaBlending)
# add_subdirectory(app-seperation-semseg)
# add_subdirectory(barcode-QRcodeScanner)
# add_subdirectory(BatchNormalization)
add_subdirectory(BlobDetector)
add_subdirectory(CenterofBlob)
# add_subdirectory(CharClassification)
# add_subdirectory(Colorization)
add_subdirectory(Colormap)
add_subdirectory(ColorSpaces)
add_subdirectory(ConvexHull)
add_subdirectory(Delaunay)

add_subdirectory(EigenFace)
add_subdirectory(example_cmake)
add_subdirectory(ExposureFusion)
add_subdirectory(FaceAverage)
add_subdirectory(FaceDetectionComparison)
add_subdirectory(FaceMorph)
add_subdirectory(FaceSwap)
# add_subdirectory(FacialAttractiveness)
# add_subdirectory(FacialLandmarkDetection)
add_subdirectory(fisheye_calibration)
add_subdirectory(forEach)
add_subdirectory(FPS)
# add_subdirectory(GOTURN)
# add_subdirectory(HandPose)
# add_subdirectory(Hangman)
add_subdirectory(hdr)
add_subdirectory(HeadPose)
# add_subdirectory(heatmap)
add_subdirectory(Holes)
add_subdirectory(Homography)
add_subdirectory(Hough-Transform)
# add_subdirectory(HuMoments)
add_subdirectory(ImageAlignment)
# add_subdirectory(ImageAlignment-FeatureBased)
# add_subdirectory(Image-Classification-in-PyTorch)
# add_subdirectory(Image-classification-pre-trained-models)
add_subdirectory(Image-Inpainting)
add_subdirectory(imread)
add_subdirectory(InvisibilityCloak)
# add_subdirectory(MultiObjectTracker)
add_subdirectory(ninjaEyeDetector)
add_subdirectory(NonPhotorealisticRendering)
# add_subdirectory(OCR)
# add_subdirectory(QRCode-OpenCV)
add_subdirectory(ReconstructFaceUsingEigenFaces)
add_subdirectory(RedEyeRemover)
add_subdirectory(RotationMatrixToEulerAngles)
add_subdirectory(SeamlessCloning)
add_subdirectory(SelectiveSearch)
# add_subdirectory(TextDetectionEAST)
add_subdirectory(Threshold)
# add_subdirectory(tracking)
add_subdirectory(UI-cvui)
add_subdirectory(VideoBackgroundEstimation)
add_subdirectory(VideoReadWriteDisplay)
add_subdirectory(VideoStabilization)
add_subdirectory(WarpTriangle)